gobmkida/c1/propagate_worm
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/propagate_worm/src/engine/worm.c:1656:40: error: use of undeclared identifier 'worm_data'
memcpy( &worm[v4], &worm[pos], sizeof( worm_data)); 
                                       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/propagate_worm/src/obj/1/worm.o] Error 1
